<resources>
    <string name="pho_app_name">Phome</string>
    <string name="cd_exer_name">Name of the exercise</string>
    <string name="serach_product">serach product…</string>
    <string name="loading_exer">Loading exercises…</string>
    <string name="exers_list">exers list</string>
    <string name="loading_something">loading something…</string>
    <string name="something_list">something list</string>
    <string name="button_routine">routine</string>
    <string name="button_start">Start</string>
    <string name="button_calendar">calendar</string>
    <string name="button_myPage">MyPage</string>
    <string name="pho_search_title">Search</string>
    <string name="pho_filter_title">Filter</string>
    <string name="mn_mypage">mypage</string>
    <string name="mn_training">training</string>
    <string name="mn_routine">routine</string>
    <string name="mn_setting">setting</string>
    <string name="title_mypage">My Page</string>
    <string name="title_training">Training</string>
    <string name="title_routine">Routines</string>
    <string name="title_setting">Settings</string>
    <string name="loading_routines">Loading Routines…</string>
    <string name="routines_list">Routines list</string>
    <string name="favorites">Favorites</string>
    <string name="basic">Basic</string>
    <string name="phomer">Phomer</string>
    <string name="All">All</string>
    <string name="mypage_sportman">sportman</string>
    <string name="routine_list">Selected Routines</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="cal_button">calculate</string>
    <string name="bmi_box">BMI_BOX</string>
    <string name="hint_height">height</string>
    <string name="hint_weight">weight</string>
    <string name="nickname">NickName</string>
    <string name="lunge_image">Lunge_image</string>
    <string name="nickname_image">NickName_image</string>
    <string name="my_page">MY PAGE</string>
    <string name="calendar">Calendar</string>
    <string name="dexer_list">Dexer List</string>
    <string name="cancel_button_txt">포기하기/중단하기</string>
    <string name="pose_help_txt">자세 흐트러지지 않게</string>
    <string name="StringValue">이미지 불러오기 실패</string>
    <string name="textview_detail">TextView</string>
    <!--    //alarm-->
    <string name="app_name">Notify Me!</string>
    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="update">Update Notification</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Mascot Notification</string>
    <string name="notification_channel_description">Notification from Mascot</string>
    <string name="loading_dexer">Loading dexer…</string>
    <string name="setting_details">Setting details</string>
    <string name="pho_button_next">Add</string>
    <string name="pho_button_cancel">Cancel</string>
    <string name="pho_error_name">Nick Name must contain at least 1 characters.</string>
    <string name="pho_error_rname">Routine Name must contain at least 1 characters. up to 8 characters </string>
    <string name="pho_error_int">This must be greater than 1.</string>
    <string name="pho_button_rename">Rename</string>
    <string name="routine_name">Routine Name</string>
    <string name="settting_dexer">Settting Dexer</string>
    <string name="new_routine">New Routine</string>
    <string name="edit">edit</string>
    <string name="trash">trash</string>
    <string name="kcal_exa">소모한 칼로리 : 235 kcal</string>
    <string name="phome">Phome</string>
    <string name="start_"><![CDATA[Start >]]></string>
    <string name="more_about">More About</string>
    <string name="congratulate">Congratulate</string>
</resources>