<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/exer_name_image"
        android:layout_width="349dp"
        android:layout_height="36dp"
        android:contentDescription="@string/StringValue"
        android:src="@drawable/lunge_name" />

    <TextView
        android:id="@+id/text_help"
        android:layout_width="139dp"
        android:layout_height="22dp"
        android:gravity="center"
        android:text="@string/pose_help_txt"
        android:textColor="#E91EA5" />

    <TextView
        android:id="@+id/count_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="60sp"
        android:textStyle="bold" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/image_exer_gif"
        android:layout_width="362dp"
        android:layout_height="341dp"
        android:src="@drawable/lunge" />

    <TextView
        android:id="@+id/text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_detail" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_txt"
        android:textColor="#FFFFFF" />

</LinearLayout>