<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exer_end">


    <ImageView
        android:id="@+id/congratulate_txt"
        android:layout_width="328dp"
        android:layout_height="76dp"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/congratulate"
        android:contentDescription="@string/congratulate" />

    <TextView
        android:id="@+id/exer_end_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/gmarketsansttfmedium"
        android:text="축하합니다! \n루틴을 모두 수행하셨어요!"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kcalory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarketsansttfmedium"
        android:text="@string/kcal_exa"
        android:textSize="18sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/exer_end_txt"
        app:layout_constraintStart_toStartOf="@+id/exer_end_txt"
        app:layout_constraintTop_toBottomOf="@+id/exer_end_txt" />

    <Button
        android:id="@+id/go_phome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="4dp"
        android:text="@string/phome"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/go_mypage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        android:textColor="#ffffff"
        android:text="@string/my_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>