<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isFromAdd"
            type="boolean" />

        <variable
            name="exerViewModel"
            type="com.smu.team_andeu.viewmodels.ExerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/item_exer"
                app:exer="@{exerViewModel.exer}" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loading_something"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/loading_something"
                    app:visibleGone="@{isLoading}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/something_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/something_list"
                    app:layoutManager="LinearLayoutManager"
                    app:visibleGone="@{!isLoading}" />
            </FrameLayout>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="center"
                app:visibleGone="@{isFromAdd}"/>
        </LinearLayout>
    </ScrollView>
</layout>