<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/settindg_txt"
        android:layout_width="226dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_txt" />

    <ImageView
        android:id="@+id/set_box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settindg_txt"
        app:srcCompat="@drawable/set_box1" />

    <ImageView
        android:id="@+id/set_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_box1"
        app:srcCompat="@drawable/set_box1" />

    <ImageView
        android:id="@+id/set_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_box3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/set_box1" />

    <ImageView
        android:id="@+id/set_box3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_box"
        app:srcCompat="@drawable/set_box1" />

    <ImageView
        android:id="@+id/push_txt"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="60dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/set_box1"
        app:layout_constraintStart_toStartOf="@+id/set_box1"
        app:layout_constraintTop_toTopOf="@+id/set_box1"
        app:srcCompat="@drawable/push_alarm" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/set_box"
        app:layout_constraintTop_toTopOf="@+id/set_box"
        app:srcCompat="@drawable/cache" />

    <Button
        android:id="@+id/button"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Deleate"
        android:textColor="#FFFFFF"
        android:textSize="7dp"
        app:layout_constraintEnd_toEndOf="@+id/set_box"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/set_box" />

    <Button
        android:id="@+id/button2"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Donate"
        android:textColor="#FFFFFF"
        android:textSize="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/set_box3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="56dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/set_box3"
        app:layout_constraintStart_toStartOf="@+id/set_box3"
        app:layout_constraintTop_toTopOf="@+id/set_box3"
        app:layout_constraintVertical_bias="0.631"
        app:srcCompat="@drawable/donate" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="206dp"
        android:layout_height="69dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="120dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@+id/set_box2"
        app:layout_constraintStart_toStartOf="@+id/set_box2"
        app:layout_constraintTop_toTopOf="@+id/set_box2"
        app:srcCompat="@drawable/mail" />

    <Button
        android:id="@+id/notify"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/notify_me"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="@+id/set_box1"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toEndOf="@+id/push_txt"
        app:layout_constraintTop_toTopOf="@+id/set_box1" />

    <Button
        android:id="@+id/update"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginEnd="48dp"
        android:text="@string/update_me"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="@+id/set_box1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notify"
        app:layout_constraintTop_toBottomOf="@+id/notify" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cancel_me"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/set_box1"
        app:layout_constraintEnd_toEndOf="@+id/set_box1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notify"
        app:layout_constraintTop_toBottomOf="@+id/update"
        app:layout_constraintVertical_bias="0.375" />


</androidx.constraintlayout.widget.ConstraintLayout>